istio/case-grpc-web/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
    service: client
spec:
  ports:
    - port: 3000
      targetPort: 3000
      name: http
      appProtocol: http
  selector:
    app: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    app: client
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
      version: v1
  template:
    metadata:
      labels:
        app: client
        version: v1
    spec:
      containers:
        - name: client
          image: nadera2/grpc-web-client
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
